# jinxed

./: .gitignore  .sourcery.yaml  .travis.yml  LICENSE.ncurses  README.rst  appveyor.yml  codegen_terminfo.py  pylintrc  setup.cfg  setup.py  setup_helpers.py  terminals-fixups.toml  terminals.toml  terminals.txt  tox.ini
.github/: FUNDING.yml
.github/workflows/: tests.yml
doc/: api.rst  capabilities.rst  conf.py  faq.rst  index.rst  intro.rst  spelling_wordlist.txt
jinxed/: __init__.py  _terminal.py  _terminfo_parser.py  _tparm.py  _util.py  termcaps.txt  win32.py
jinxed/__pyinstaller/: __init__.py  conftest.py  hook-jinxed.py  test_jinxed.py
jinxed/terminfo/: Eterm.py  __init__.py  _aliases.py  adm3a.py  alacritty.py  alacritty_direct.py  ansi.py  ansi_bbs.py  ansicon.py  aterm.py  cons25.py  contour.py  domterm.py  dtterm.py  foot.py  foot_direct.py  ghostty.py  gnome.py  gnome_256color.py  hpterm.py  hpterm_color.py  iTerm.app.py  iTerm2_app.py  ibm3151.py  ibm3161.py  ibm3162.py  ibm3164.py  ibm5151.py  ibm8514.py  iris_ansi.py  iterm2_app.py  kitty.py  kitty_direct.py  konsole.py  konsole_256color.py  konsole_direct.py  linux.py  linux_16color.py  mintty.py  mlterm.py  (+66 more)
tests/: __init__.py  test_terminal.py  test_terminfo.py  test_tparm.py
