[bdist_wheel]
universal=1

[metadata]
description-file = README.rst
license_file = LICENSE

[flake8]
max-line-length = 100
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,build

[pycodestyle]
max-line-length = 100

[coverage:run]
branch = True
source =
    jinxed

[coverage:report]
show_missing: True
exclude_lines =
	pragma: no cover
	raise NotImplementedError
	if __name__ == "__main__":

